# Smart-Access-Control-System

./: LICENSE  README.md
docs/: 需求分析.md
firmware/esp32-s3/face_detect/: CMakeLists.txt  sdkconfig.old
firmware/esp32-s3/test_camera/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/esp32-s3/test_camera2rgb/: CMakeLists.txt
firmware/esp32-s3/test_camera2rgb/components/BSP/: CMakeLists.txt
firmware/esp32-s3/test_camera_ai_face/: README.md  sdkconfig
sever/: docker-compose.yml  go.mod  go.sum  main.go
sever/ai/: pc_server.py  pyproject.toml
sever/config/: config.go  postgres_localhost-2025_11_20_12_16_43-dump.sql  postgresqlDocker.txt
sever/database/: db.go  dbgorm.go
sever/docs/dataset/: 各表应该支持的功能.md  门禁系统表设计.md
sever/docs/service/: service层应该包含的业务.md
sever/handlers/: admin.go  api.go  emqx.go  node.go
sever/init-scripts/: all_schemas.sql
sever/jobs/: mqtt.go
sever/middleware/: token.go
sever/models/: access_log.go  admin.go  device.go  log_query.go  message.go  node.go  task.go  user_permission.go
sever/mosquitto/config/: mosquitto.conf
sever/mqtt/: mqtt.go
sever/repository/: access_log_repo.go  device_repo.go  message_repo.go  node_repo.go  user_permission_repo.go  user_repo.go
sever/router/: router.go
sever/service/: admin_service.go  message_service.go  node_service.go
sever/state/: state.go
sever/task/: manager.go
sever/web/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
sever/web/android/app/: build.gradle
sever/web/src/: axios.ts  main.ts  permisson.ts
(+37 files in other folders)
